# Luma

./: .gitignore  README.md  package-lock.json  package.json
actions/: README.md
actions/contar-caracteres/: README.md  manifest.json
actions/copy-color/: README.md  manifest.json
actions/extract-text/: README.md  manifest.json
actions/image-convert/: README.md  manifest.json
actions/merge-pdf/: README.md  manifest.json
actions/schema/: lm-action.schema.json
actions/template/: README.md  manifest.json
actions/translate-image/: README.md  manifest.json
actions/translate-this/: README.md  manifest.json
actions/video-downloader/: README.md  manifest.json
components/ocr/: index.html  ocr.js
docs/: tool-guidelines.md  wsb-format.md
scripts/: check.js  start.js
scripts/lm/: pack-action.js  validate-action.js
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/renderer/: action-host.html  action-host.js  contar-caracteres.css  contar-caracteres.html  contar-caracteres.js  copy-color-overlay.css  copy-color-overlay.html  copy-color-overlay.js  image-convert.css  image-convert.html  image-convert.js  (+12 more)
web/: account.php  action.php  actions.php  compiler.js  compiler.php  docs.php  download-luma.php  download.php  forgot-password.php  forms.js  index.php  login.php  logout.php  lumadb.sql  my-actions.php  nav.js  publish-action.php  register.php  report.php  reset-password.php  save-action.php  saved.php  styles.css  upload.php  versions-admin.php  versions.php
(+32 files in other folders)
