[package]
name = "luma"
version = "0.1.0"
description = "Minimal desktop launcher for LUMA Actions."
authors = ["LUMA"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "ico"] }
lopdf = "0.34"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
zip = "2"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
